# xixi-zk

./: CAVEAT.md  POST.md  README.md
example/: route1-bad.txt
json-generator/: convert_motadata.py
motadata-visualizer/: README.md  convert_motadata_modified.py  data_loader.js  game_data.json  index.html  script.js  style.css
route-converter/: README.md  converter.js
xixi-zk/: Cargo.toml
xixi-zk/core/: Cargo.toml
xixi-zk/core/src/: lib.rs
xixi-zk/host/: Cargo.toml
xixi-zk/host/src/: main.rs
xixi-zk/methods/: Cargo.toml  build.rs
xixi-zk/methods/guest/: Cargo.toml
xixi-zk/methods/guest/src/: lib.rs  main.rs  model.rs  simulator.rs  verifier.rs
