[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.3.1" }
#risc0-zkvm = { version = "<= 2.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
bincode = "1"
# xixi-core = { path = "../core" }
# xixi-core = { path = "../methods/core" }
xixi-core = { path = "../methods/guest/core" }
sha2 = "0.10"
