[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "^2.3.1" }
#risc0-build = { version = "<= 2.3.0" }
#risc0-build = { version = "^2.2.0" }
# use below to force a version ...
# cargo update -p risc0-build --precise 2.2.0 --verbose
# risc0-build = { version = "2.2.0" }

[package.metadata.risc0]
methods = ["guest"]
